  erDiagram
      weapons ||--o{ weapon_perks : "has"
      weapons ||--o{ weapon_legendary_perk_effects : "has"
      weapons ||--o{ weapon_perk_rules : "has"
      perks ||--o{ weapon_perks : "affects"
      perks ||--o{ perk_ranks : "has"
      perks ||--o{ weapon_perk_rules : "defines"
      legendary_perks ||--o{ weapon_legendary_perk_effects : "affects"
      legendary_perks ||--o{ legendary_perk_ranks : "has"

      weapons {
          int id PK
          varchar name UK
          varchar type
          varchar class
          varchar level
          varchar damage
          text perks_raw
          text source_url
      }

      armor {
          int id PK
          varchar name
          varchar class
          varchar slot
          varchar damage_resistance
          varchar energy_resistance
          varchar radiation_resistance
          varchar cryo_resistance
          varchar fire_resistance
          varchar poison_resistance
          varchar set_name
          enum armor_type
          varchar level
          text source_url
      }

      perks {
          int id PK
          varchar name UK
          char special
          int level
          varchar race
      }

      perk_ranks {
          int id PK
          int perk_id FK
          int rank
          text description
          char form_id
      }

      legendary_perks {
          int id PK
          varchar name UK
          text description
          varchar race
      }

      legendary_perk_ranks {
          int id PK
          int legendary_perk_id FK
          int rank
          text description
          varchar effect_value
          varchar effect_type
      }

      weapon_perks {
          int weapon_id FK,PK
          int perk_id FK,PK
      }

      weapon_legendary_perk_effects {
          int weapon_id FK,PK
          int legendary_perk_id FK,PK
      }

      weapon_perk_rules {
          int id PK
          int weapon_id FK
          int perk_id FK
          enum weapon_class
          enum fire_mode
          enum scope_state
          enum aim_state
          enum vats_state
          varchar mod_requirements
          varchar note
      }

      mutations {
          int id PK
          varchar name UK
          text positive_effects
          text negative_effects
          char form_id
          varchar exclusive_with
          varchar suppression_perk
          varchar enhancement_perk
          text source_url
      }

      consumables {
          int id PK
          varchar name UK
          enum category
          varchar subcategory
          text effects
          varchar duration
          varchar hp_restore
          varchar rads
          varchar hunger_satisfaction
          varchar thirst_satisfaction
          text special_modifiers
          varchar addiction_risk
          varchar disease_risk
          decimal weight
          int value
          char form_id
          varchar crafting_station
          text source_url
      }